i18n(es): sync Spanish translations

--- a/src/locales/es/activity-management.json
+++ b/src/locales/es/activity-management.json
@@ -1,73 +1,73 @@
 {
-  "title": "Gestión de Actividades",
-  "description": "Gestionar y editar actividades",
-  "create": "Nueva Actividad",
-  "createDescription": "Introducir información de la nueva actividad",
-  "edit": "Editar Actividad",
+  "title": "Gestión de actividades",
+  "description": "Gestione y edite las actividades",
+  "create": "Nueva actividad",
+  "createDescription": "Ingrese la información de la nueva actividad",
+  "edit": "Editar actividad",
   "editButton": "Editar",
-  "editDescription": "Editar información de la actividad",
+  "editDescription": "Edite la información de la actividad",
   "delete": "Eliminar",
-  "deleteTitle": "Eliminar Actividad",
+  "deleteTitle": "Eliminar actividad",
   "subject": "Asunto",
-  "activityType": "Tipo de Actividad",
-  "potentialCustomerId": "Cliente Potencial",
+  "activityType": "Tipo de actividad",
+  "potentialCustomerId": "Cliente potencial",
   "potentialCustomer": "Cliente",
   "customer": "Cliente",
-  "selectCustomer": "Seleccionar Cliente",
-  "erpCustomerCode": "Código de Cliente ERP",
+  "selectCustomer": "Seleccionar cliente",
+  "erpCustomerCode": "Código de cliente ERP",
   "product": "Stock/Producto",
-  "selectProduct": "Seleccionar Stock/Producto",
+  "selectProduct": "Seleccionar stock/producto",
   "status": "Estado",
-  "isCompleted": "Completado",
+  "isCompleted": "Completada",
   "priority": "Prioridad",
   "contactId": "Contacto",
   "contact": "Contacto",
-  "assignedUserId": "Usuario Asignado",
-  "assignedUser": "Asignado A",
-  "activityDate": "Fecha de Actividad",
+  "assignedUserId": "Usuario asignado",
+  "assignedUser": "Responsable",
+  "activityDate": "Fecha de actividad",
   "activityDateRequired": "La fecha de actividad es obligatoria",
-  "createdDate": "Fecha de Creación",
-  "updatedDate": "Fecha de Actualización",
+  "createdDate": "Fecha de creación",
+  "updatedDate": "Fecha de actualización",
   "actions": "Acciones",
   "search": "Buscar",
-  "filterByActivityType": "Filtrar por Tipo de Actividad",
-  "filterByStatus": "Filtrar por Estado",
-  "filterByPriority": "Filtrar por Prioridad",
-  "filterByPotentialCustomer": "Filtrar por Cliente",
-  "filterByContact": "Filtrar por Contacto",
-  "filterByAssignedUser": "Filtrar por Usuario Asignado",
-  "filterByIsCompleted": "Filtrar por Estado de Finalización",
-  "filterByCreatedDateRange": "Filtrar por Rango de Fecha de Creación",
+  "filterByActivityType": "Filtrar por tipo de actividad",
+  "filterByStatus": "Filtrar por estado",
+  "filterByPriority": "Filtrar por prioridad",
+  "filterByPotentialCustomer": "Filtrar por cliente",
+  "filterByContact": "Filtrar por contacto",
+  "filterByAssignedUser": "Filtrar por usuario asignado",
+  "filterByIsCompleted": "Filtrar por estado de finalización",
+  "filterByCreatedDateRange": "Filtrar por rango de fecha de creación",
   "noData": "No se encontraron datos",
-  "confirmDelete": "¿Está seguro de que desea eliminar esta actividad?",
-  "createSuccess": "Actividad creada con éxito",
-  "updateSuccess": "Actividad actualizada con éxito",
-  "deleteSuccess": "Actividad eliminada con éxito",
+  "confirmDelete": "¿Seguro que desea eliminar esta actividad?",
+  "createSuccess": "Actividad creada correctamente",
+  "updateSuccess": "Actividad actualizada correctamente",
+  "deleteSuccess": "Actividad eliminada correctamente",
   "createError": "Ocurrió un error al crear la actividad",
   "updateError": "Ocurrió un error al actualizar la actividad",
   "deleteError": "Ocurrió un error al eliminar la actividad",
   "subjectRequired": "El asunto es obligatorio",
-  "subjectMaxLength": "El asunto debe tener como máximo 100 caracteres",
-  "descriptionMaxLength": "La descripción debe tener como máximo 500 caracteres",
+  "subjectMaxLength": "El asunto puede tener como máximo 100 caracteres",
+  "descriptionMaxLength": "La descripción puede tener como máximo 500 caracteres",
   "activityTypeRequired": "La selección del tipo de actividad es obligatoria",
-  "activityTypeMaxLength": "El tipo de actividad debe tener como máximo 50 caracteres",
-  "statusRequired": "La selección del estado es obligatoria",
-  "statusMaxLength": "El estado debe tener como máximo 50 caracteres",
-  "priorityMaxLength": "La prioridad debe tener como máximo 50 caracteres",
-  "enterSubject": "Introducir Asunto",
-  "enterDescription": "Introducir Descripción (Opcional)",
-  "selectActivityType": "Seleccionar Tipo de Actividad",
-  "selectPotentialCustomer": "Seleccionar Cliente Potencial (Opcional)",
-  "enterErpCustomerCode": "Introducir Código de Cliente ERP (Opcional)",
-  "selectStatus": "Seleccionar Estado",
-  "selectPriority": "Seleccionar Prioridad (Opcional)",
-  "selectContact": "Seleccionar Contacto (Opcional)",
-  "selectAssignedUser": "Seleccionar Usuario Asignado (Opcional)",
-  "noCustomerSelected": "Ningún cliente seleccionado",
-  "noContactSelected": "Ningún contacto seleccionado",
-  "noUserSelected": "Ningún usuario seleccionado",
-  "noPrioritySelected": "Ninguna prioridad seleccionada",
-  "selectCustomerFirst": "Seleccionar cliente primero",
+  "activityTypeMaxLength": "El tipo de actividad puede tener como máximo 50 caracteres",
+  "statusRequired": "La selección de estado es obligatoria",
+  "statusMaxLength": "El estado puede tener como máximo 50 caracteres",
+  "priorityMaxLength": "La prioridad puede tener como máximo 50 caracteres",
+  "enterSubject": "Ingrese el asunto",
+  "enterDescription": "Ingrese una descripción (opcional)",
+  "selectActivityType": "Seleccione tipo de actividad",
+  "selectPotentialCustomer": "Seleccione cliente potencial (opcional)",
+  "enterErpCustomerCode": "Ingrese código de cliente ERP (opcional)",
+  "selectStatus": "Seleccione estado",
+  "selectPriority": "Seleccione prioridad (opcional)",
+  "selectContact": "Seleccione contacto (opcional)",
+  "selectAssignedUser": "Seleccione usuario asignado (opcional)",
+  "noCustomerSelected": "No se seleccionó cliente",
+  "noContactSelected": "No se seleccionó contacto",
+  "noUserSelected": "No se seleccionó usuario",
+  "noPrioritySelected": "No se seleccionó prioridad",
+  "selectCustomerFirst": "Seleccione primero un cliente",
   "loading": "Cargando...",
   "save": "Guardar",
   "saving": "Guardando...",
@@ -77,64 +77,64 @@
   "productDisplay": "{{code}} - {{name}}",
   "erpLabel": "ERP: {{code}}",
   "close": "Cerrar",
-  "clearFilters": "Borrar Filtros",
-  "applyFilters": "Aplicar Filtros",
-  "markAsCompleted": "Marcar como Completado",
-  "markAsInProgress": "Marcar como En Progreso",
+  "clearFilters": "Limpiar filtros",
+  "applyFilters": "Aplicar filtros",
+  "markAsCompleted": "Marcar como completada",
+  "markAsInProgress": "Marcar en progreso",
   "cancelActivity": "Cancelar",
-  "confirmMarkAsCompleted": "¿Está seguro de que desea marcar esta actividad como completada?",
-  "confirmMarkAsInProgress": "¿Está seguro de que desea marcar esta actividad como en progreso?",
-  "confirmCancel": "¿Está seguro de que desea cancelar esta actividad?",
+  "confirmMarkAsCompleted": "¿Seguro que desea marcar esta actividad como completada?",
+  "confirmMarkAsInProgress": "¿Seguro que desea marcar esta actividad como en progreso?",
+  "confirmCancel": "¿Seguro que desea cancelar esta actividad?",
   "markAsCompletedSuccess": "Actividad marcada como completada",
   "markAsInProgressSuccess": "Actividad marcada como en progreso",
   "cancelSuccess": "Actividad cancelada",
-  "statusChangeWarning": "¿Está seguro de que desea cambiar el estado?",
-  "autoCompleteStatus": "Se marcará automáticamente cuando el estado se establezca en 'Completado'",
+  "statusChangeWarning": "¿Seguro que desea cambiar el estado?",
+  "autoCompleteStatus": "Se marcará automáticamente cuando el estado sea 'Completada'",
   "activityTypeCall": "Llamada",
   "activityTypeMeeting": "Reunión",
-  "activityTypeEmail": "Correo Electrónico",
+  "activityTypeEmail": "Correo",
   "activityTypeTask": "Tarea",
   "activityTypeNote": "Nota",
   "activityTypeEvent": "Evento",
-  "statusScheduled": "Programado",
-  "statusInProgress": "En Progreso",
-  "statusCompleted": "Completado",
-  "statusCanceled": "Cancelado",
-  "statusPostponed": "Pospuesto",
+  "statusScheduled": "Programada",
+  "statusInProgress": "En progreso",
+  "statusCompleted": "Completada",
+  "statusCanceled": "Cancelada",
+  "statusPostponed": "Pospuesta",
   "priorityLow": "Baja",
   "priorityMedium": "Media",
   "priorityHigh": "Alta",
-  "allActivityTypes": "Todos los Tipos de Actividad",
-  "allStatuses": "Todos los Estados",
-  "allPriorities": "Todas las Prioridades",
-  "completedActivities": "Actividades Completadas",
-  "pendingActivities": "Actividades Pendientes",
-  "highPriorityActivities": "Actividades de Alta Prioridad",
+  "allActivityTypes": "Todos los tipos de actividad",
+  "allStatuses": "Todos los estados",
+  "allPriorities": "Todas las prioridades",
+  "completedActivities": "Actividades completadas",
+  "pendingActivities": "Actividades pendientes",
+  "highPriorityActivities": "Actividades de alta prioridad",
   "noCompletedActivities": "No se encontraron actividades completadas",
   "noPendingActivities": "No se encontraron actividades pendientes",
-  "activityDetails": "Detalles de la Actividad",
-  "customerInformation": "Información del Cliente",
-  "contactInformation": "Información del Contacto",
-  "assignedUserInformation": "Información del Usuario Asignado",
-  "calendarView": "Vista de Calendario",
+  "activityDetails": "Detalles de la actividad",
+  "customerInformation": "Información del cliente",
+  "contactInformation": "Información de contacto",
+  "assignedUserInformation": "Información del responsable",
+  "calendarView": "Vista de calendario",
   "kanbanView": "Vista Kanban",
-  "tableView": "Vista de Tabla",
-  "switchToCalendar": "Cambiar a Vista de Calendario",
-  "switchToKanban": "Cambiar a Vista Kanban",
-  "switchToTable": "Cambiar a Vista de Tabla",
+  "tableView": "Vista de tabla",
+  "switchToCalendar": "Cambiar a vista de calendario",
+  "switchToKanban": "Cambiar a vista Kanban",
+  "switchToTable": "Cambiar a vista de tabla",
   "table": {
     "id": "ID",
     "subject": "Asunto",
-    "activityType": "Tipo de Actividad",
+    "activityType": "Tipo de actividad",
     "status": "Estado",
     "priority": "Prioridad",
     "potentialCustomer": "Cliente",
     "contact": "Contacto",
-    "assignedUser": "Asignado A",
-    "isCompleted": "Completado",
-    "createdDate": "Fecha de Creación",
-    "updatedDate": "Fecha de Actualización",
-    "showing": "Mostrando {{from}}-{{to}} de {{total}}",
-    "page": "Página {{current}} de {{total}}"
+    "assignedUser": "Responsable",
+    "isCompleted": "Completada",
+    "createdDate": "Fecha de creación",
+    "updatedDate": "Fecha de actualización",
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Página {{current}} / {{total}}"
   }
 }
