--- a/src/locales/es/approval-role-management.json
+++ b/src/locales/es/approval-role-management.json
@@ -1,19 +1,19 @@
 {
   "approvalRole": {
-    "menu": "Gestión de Roles de Aprobación",
-    "description": "Gestionar y organizar roles de aprobación",
-    "addButton": "Añadir Nuevo Rol",
+    "menu": "Gestión de roles de aprobación",
+    "description": "Gestione y edite los roles de aprobación",
+    "addButton": "Agregar nuevo rol de aprobación",
     "searchPlaceholder": "Buscar...",
     "refresh": "Actualizar",
     "loading": "Cargando...",
     "noData": "Sin datos",
     "table": {
       "id": "ID",
-      "approvalRoleGroupName": "Grupo de Roles",
-      "name": "Nombre del Rol",
-      "maxAmount": "Monto Máximo",
-      "createdDate": "Fecha Creación",
-      "createdBy": "Creado Por",
+      "approvalRoleGroupName": "Grupo de roles",
+      "name": "Nombre del rol",
+      "maxAmount": "Importe máximo",
+      "createdDate": "Fecha de creación",
+      "createdBy": "Creado por",
       "actions": "Acciones",
       "totalRecords": "Total {{count}} registros.",
       "page": "Página {{current}} / {{total}}",
@@ -21,28 +21,28 @@
       "next": "Siguiente"
     },
     "delete": {
-      "confirmTitle": "Confirmación de Eliminación",
-      "confirmMessage": "¿Está seguro de que desea eliminar este registro? Esta acción no se puede deshacer.",
+      "confirmTitle": "Confirmación de eliminación",
+      "confirmMessage": "¿Seguro que desea eliminar este registro? Esta acción no se puede deshacer.",
       "cancelButton": "Cancelar",
       "confirmButton": "Eliminar",
       "deleting": "Eliminando..."
     },
     "form": {
-      "editTitle": "Editar Rol de Aprobación",
-      "addTitle": "Añadir Nuevo Rol de Aprobación",
-      "editDescription": "Editar detalles del rol de aprobación",
-      "addDescription": "Ingrese detalles del nuevo rol",
-      "approvalRoleGroupId": "Grupo de Roles de Aprobación",
-      "selectApprovalRoleGroup": "Seleccionar Grupo de Roles",
-      "noApprovalRoleGroupSelected": "Ningún grupo seleccionado",
-      "name": "Nombre del Rol",
-      "namePlaceholder": "Ingrese nombre del rol",
-      "maxAmount": "Monto Máximo",
-      "maxAmountPlaceholder": "Ingrese monto máximo",
-      "approvalRoleGroupIdRequired": "La selección del grupo es obligatoria",
+      "editTitle": "Editar rol de aprobación",
+      "addTitle": "Agregar nuevo rol de aprobación",
+      "editDescription": "Edite la información del rol de aprobación",
+      "addDescription": "Ingrese la información del nuevo rol de aprobación",
+      "approvalRoleGroupId": "Grupo de rol de aprobación",
+      "selectApprovalRoleGroup": "Seleccione grupo de rol de aprobación",
+      "noApprovalRoleGroupSelected": "No se seleccionó grupo de rol de aprobación",
+      "name": "Nombre del rol",
+      "namePlaceholder": "Ingrese el nombre del rol",
+      "maxAmount": "Importe máximo",
+      "maxAmountPlaceholder": "Ingrese el importe máximo",
+      "approvalRoleGroupIdRequired": "La selección del grupo de rol es obligatoria",
       "nameRequired": "El nombre del rol es obligatorio",
-      "nameMaxLength": "El nombre puede tener máx. 100 caracteres",
-      "maxAmountMin": "El monto máximo no puede ser menor a 0",
+      "nameMaxLength": "El nombre del rol puede tener como máximo 100 caracteres",
+      "maxAmountMin": "El importe máximo no puede ser menor que 0",
       "cancel": "Cancelar",
       "save": "Guardar",
       "saving": "Guardando..."
