--- a/src/locales/es/pricing-rule.json
+++ b/src/locales/es/pricing-rule.json
@@ -31,5 +31,97 @@
     "updateSuccess": "Regla actualizada con éxito",
     "deleteSuccess": "Regla eliminada con éxito",
     "confirmDelete": "¿Está seguro de que desea eliminar esta regla?"
+  },
+  "loading": "Cargando...",
+  "loadingDescription": "Se está cargando la información de reglas de precio",
+  "list": {
+    "title": "Reglas de precio",
+    "description": "Gestione las reglas de precio y sus líneas",
+    "add": "Agregar regla",
+    "empty": "No hay reglas de precio"
+  },
+  "salesmen": {
+    "title": "Vendedores",
+    "addSuccess": "Vendedor agregado",
+    "addSuccessMessage": "El vendedor se agregó correctamente",
+    "addError": "Error al agregar",
+    "addErrorMessage": "No se pudo agregar el vendedor",
+    "deleteSuccess": "Vendedor eliminado",
+    "deleteSuccessMessage": "El vendedor se eliminó correctamente",
+    "deleteError": "Error al eliminar",
+    "deleteErrorMessage": "No se pudo eliminar el vendedor"
+  },
+  "header": {
+    "ruleType": "Tipo de regla",
+    "ruleCode": "Código de regla",
+    "ruleName": "Nombre de regla",
+    "validFrom": "Válido desde",
+    "validTo": "Válido hasta",
+    "customer": "Cliente",
+    "erpCustomerCode": "Código de cliente ERP",
+    "branchCode": "Código de sucursal",
+    "currencyCode": "Moneda",
+    "priceIncludesVat": "Incluye IVA",
+    "isActive": "Activo",
+    "ruleTypePlaceholder": "Seleccione tipo de regla",
+    "validToMustBeAfterValidFrom": "La fecha de fin debe ser posterior a la fecha de inicio",
+    "ruleCodePlaceholder": "Ingrese código de regla",
+    "ruleNamePlaceholder": "Ingrese nombre de regla",
+    "customerPlaceholder": "Ingrese cliente",
+    "selectCustomer": "Seleccione cliente",
+    "branchCodePlaceholder": "Ingrese código de sucursal",
+    "selectCurrency": "Seleccione moneda"
+  },
+  "ruleType": {
+    "demand": "Solicitud",
+    "quotation": "Cotización",
+    "order": "Pedido",
+    "unknown": "Desconocido"
+  },
+  "lines": {
+    "title": "Líneas",
+    "add": "Agregar línea",
+    "empty": "No hay líneas",
+    "stokCode": "Código de stock",
+    "minQuantity": "Cantidad mín.",
+    "maxQuantity": "Cantidad máx.",
+    "fixedUnitPrice": "Precio unitario fijo",
+    "discount1": "Descuento 1",
+    "discount2": "Descuento 2",
+    "discount3": "Descuento 3",
+    "discount1Rate": "Tasa de descuento 1",
+    "discount1Amount": "Importe de descuento 1",
+    "discount2Rate": "Tasa de descuento 2",
+    "discount2Amount": "Importe de descuento 2",
+    "discount3Rate": "Tasa de descuento 3",
+    "discount3Amount": "Importe de descuento 3",
+    "minQuantityMin": "La cantidad mín. debe ser mayor que 0",
+    "minQuantityMax": "La cantidad mín. debe ser menor que la cantidad máx.",
+    "maxQuantityMin": "La cantidad máx. debe ser mayor que 0",
+    "maxQuantityMustBeGreaterThanMin": "La cantidad máx. debe ser mayor que la cantidad mín.",
+    "fixedUnitPriceMin": "El precio unitario fijo debe ser mayor que 0",
+    "required": "Obligatorio",
+    "selectStock": "Seleccione stock",
+    "selectProduct": "Seleccione producto",
+    "stokCodePlaceholder": "Ingrese código de stock",
+    "stokCodeRequired": "El código de stock es obligatorio",
+    "minQuantityRequired": "La cantidad mín. es obligatoria",
+    "maxQuantityRequired": "La cantidad máx. es obligatoria",
+    "fixedUnitPriceRequired": "El precio unitario fijo es obligatorio",
+    "currencyCodeRequired": "La moneda es obligatoria",
+    "selectCurrency": "Seleccione moneda",
+    "minQuantityInvalid": "Cantidad mínima inválida",
+    "minQuantityInvalidMessage": "Ingrese una cantidad mínima válida"
+  },
+  "card": {
+    "customer": "Cliente",
+    "lines": "Líneas",
+    "salesmen": "Vendedores",
+    "vatIncluded": "IVA incluido"
+  },
+  "status": {
+    "active": "Activo",
+    "inactive": "Inactivo",
+    "expired": "Vencido"
   }
 }
