--- a/src/locales/es/product-select-dialog.json
+++ b/src/locales/es/product-select-dialog.json
@@ -12,5 +12,10 @@
     "stock": "Stock"
   },
   "noData": "No se encontraron productos",
-  "loading": "Cargando productos..."
+  "loading": "Cargando",
+  "description": "Seleccione productos del ERP para agregar a su pedido",
+  "product": "Producto",
+  "noProducts": "No hay productos",
+  "noResults": "No se encontraron resultados",
+  "voiceSearch": "Búsqueda por voz"
 }
