--- a/src/locales/es/related-stocks-selection-dialog.json
+++ b/src/locales/es/related-stocks-selection-dialog.json
@@ -1,6 +1,6 @@
 {
-  "title": "Selección de Stocks Relacionados",
-  "description": "Seleccionar stocks relacionados para el producto",
+  "title": "Seleccione stocks relacionados",
+  "description": "Seleccione los stocks relacionados que desea agregar junto con el stock principal. Los stocks obligatorios se seleccionan automáticamente.",
   "searchPlaceholder": "Buscar stocks relacionados...",
   "select": "Seleccionar",
   "cancel": "Cancelar",
@@ -11,5 +11,13 @@
     "quantity": "Cantidad"
   },
   "noData": "No se encontraron stocks relacionados",
-  "loading": "Cargando..."
+  "loading": "Cargando...",
+  "mandatoryStocks": "Stocks obligatorios",
+  "optionalStocks": "Stocks opcionales",
+  "unknownStock": "Stock desconocido",
+  "quantity": "Cantidad",
+  "mandatory": "Obligatorio",
+  "noRelatedStocks": "No se encontraron stocks relacionados",
+  "add": "Agregar",
+  "calculating": "Calculando..."
 }
