--- a/src/locales/es/stock.json
+++ b/src/locales/es/stock.json
@@ -27,5 +27,105 @@
     "out": "Salida",
     "transfer": "Transferencia",
     "adjustment": "Ajuste"
+  },
+  "list": {
+    "title": "Productos",
+    "description": "Administre los productos sincronizados con el ERP",
+    "syncedFromErp": "Sincronizado desde ERP",
+    "search": "Buscar",
+    "id": "ID",
+    "erpStockCode": "Código de stock ERP",
+    "stockName": "Nombre del producto",
+    "unit": "Unidad",
+    "actions": "Acciones",
+    "viewDetail": "Ver detalle",
+    "showing": "Mostrando",
+    "page": "Página",
+    "previous": "Anterior",
+    "next": "Siguiente"
+  },
+  "detail": {
+    "title": "Detalle del producto",
+    "basicInfo": "Información básica",
+    "basicInfoReadonly": "Información básica (solo lectura)",
+    "images": "Imágenes",
+    "relations": "Relaciones",
+    "save": "Guardar",
+    "cancel": "Cancelar",
+    "erpStockCode": "Código de stock ERP",
+    "stockName": "Nombre del producto",
+    "unit": "Unidad",
+    "htmlDescription": "Descripción HTML",
+    "htmlDescriptionPlaceholder": "Ingrese descripción HTML",
+    "htmlDescription.required": "La descripción HTML es obligatoria",
+    "technicalSpecs": "Especificaciones técnicas",
+    "technicalSpecsPlaceholder": "Ingrese especificaciones técnicas",
+    "notFound": "Producto no encontrado",
+    "notFoundDesc": "El producto solicitado no existe",
+    "backToStockList": "Volver a la lista",
+    "mainInfo": "Información principal",
+    "ureticiKodu": "Código de fabricante",
+    "groupInfo": "Información de grupo",
+    "branchCode": "Código de sucursal",
+    "grup": "Grupo",
+    "specialCodes": "Códigos especiales",
+    "kod1": "Código 1",
+    "kod2": "Código 2",
+    "kod3": "Código 3",
+    "kod4": "Código 4",
+    "kod5": "Código 5",
+    "created": "Creado",
+    "updated": "Actualizado",
+    "copied": "Copiado",
+    "copy": "Copiar"
+  },
+  "images": {
+    "upload": "Subir",
+    "uploadHint": "Arrastre y suelte imágenes o haga clic para seleccionar",
+    "uploadButton": "Seleccionar archivo",
+    "selectedFiles": "Archivos seleccionados",
+    "altText": "Texto alternativo",
+    "primary": "Principal",
+    "setPrimary": "Establecer como principal",
+    "delete": "Eliminar",
+    "noImages": "Sin imágenes",
+    "deleteConfirm": "Eliminar imagen",
+    "deleteConfirmMessage": "¿Seguro que desea eliminar esta imagen?"
+  },
+  "relations": {
+    "add": "Agregar relación",
+    "relatedStock": "Producto relacionado",
+    "relatedStock.required": "Se requiere seleccionar el producto relacionado",
+    "quantity": "Cantidad",
+    "quantity.positive": "La cantidad debe ser un número positivo",
+    "description": "Descripción",
+    "descriptionPlaceholder": "Ingrese una descripción",
+    "isMandatory": "Obligatorio",
+    "mandatory": "Obligatorio",
+    "optional": "Opcional",
+    "delete": "Eliminar",
+    "cancel": "Cancelar",
+    "deleting": "Eliminando...",
+    "actions": "Acciones",
+    "noRelations": "Sin relaciones",
+    "noRelationsDesc": "No hay productos relacionados",
+    "selectStock": "Seleccione producto",
+    "search": "Buscar",
+    "deleteConfirm": "Eliminar relación",
+    "deleteConfirmMessage": "¿Seguro que desea eliminar esta relación?",
+    "confirmDelete": "Confirmar eliminación",
+    "stockCode": "Código de stock",
+    "stockName": "Nombre del producto",
+    "noStockFound": "No se encontraron productos",
+    "saving": "Guardando..."
+  },
+  "messages": {
+    "detailCreateSuccess": "Detalle creado correctamente",
+    "detailUpdateSuccess": "Detalle actualizado correctamente",
+    "deleteSuccess": "Eliminado correctamente",
+    "uploadSuccess": "Imagen subida correctamente",
+    "setPrimarySuccess": "Imagen principal actualizada",
+    "relationCreateSuccess": "Relación creada correctamente",
+    "error": "Ocurrió un error"
   }
 }
