--- a/src/locales/es/title-management.json
+++ b/src/locales/es/title-management.json
@@ -7,19 +7,22 @@
   "deleteMessage": "¿Estás seguro de que deseas eliminar este título?",
   "deleteSuccess": "Título eliminado con éxito",
   "table": {
-    "name": "Título",
+    "name": "Nombre del título",
     "code": "Código",
     "description": "Descripción",
     "status": "Estado",
     "actions": "Acciones",
     "searchPlaceholder": "Buscar títulos...",
-    "showing": "Mostrando {{from}}-{{to}} de {{total}}",
-    "page": "Página {{current}} de {{total}}",
-    "rowsPerPage": "Filas por página"
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Página {{current}} / {{total}}",
+    "rowsPerPage": "Filas por página",
+    "id": "ID",
+    "createdDate": "Fecha de creación",
+    "createdBy": "Creado por"
   },
   "form": {
-    "addTitle": "Añadir Nuevo Título",
-    "editTitle": "Editar Título",
+    "addTitle": "Agregar nuevo título",
+    "editTitle": "Editar título",
     "name": "Título",
     "code": "Código",
     "description": "Descripción",
@@ -30,6 +33,34 @@
     "save": "Guardar",
     "required": "Requerido",
     "successAdd": "Título añadido con éxito",
-    "successUpdate": "Título actualizado con éxito"
+    "successUpdate": "Título actualizado con éxito",
+    "addDescription": "Ingrese la información del nuevo título",
+    "editDescription": "Edite la información del título",
+    "titleName": "Nombre del título",
+    "titleNamePlaceholder": "Ingrese el nombre del título",
+    "titleCode": "Código del título",
+    "codePlaceholder": "Ingrese código (opcional)",
+    "saving": "Guardando..."
+  },
+  "loading": "Cargando...",
+  "noData": "No se encontraron datos",
+  "search": "Buscar...",
+  "refresh": "Actualizar",
+  "previous": "Anterior",
+  "next": "Siguiente",
+  "cancel": "Cancelar",
+  "save": "Guardar",
+  "saving": "Guardando...",
+  "delete": {
+    "confirmTitle": "Eliminar título",
+    "confirmMessage": "¿Seguro que desea eliminar el título {{name}}?",
+    "button": "Eliminar"
+  },
+  "deleting": "Eliminando...",
+  "actions": "Acciones",
+  "edit": "Editar",
+  "header": {
+    "title": "Gestión de títulos",
+    "description": "Puede gestionar las definiciones de títulos aquí."
   }
 }
