--- a/src/locales/es/user-management.json
+++ b/src/locales/es/user-management.json
@@ -1,28 +1,41 @@
 {
-  "menu": "Gestión de Usuarios",
+  "menu": "Gestión de usuarios",
   "title": "Gestión de Usuarios",
-  "description": "Gestionar y editar usuarios",
-  "addButton": "Añadir Nuevo Usuario",
+  "description": "Gestione y edite los usuarios",
+  "addButton": "Agregar nuevo usuario",
   "deleteTitle": "Eliminar Usuario",
   "deleteMessage": "¿Estás seguro de que deseas eliminar este usuario?",
   "deleteSuccess": "Usuario eliminado con éxito",
   "table": {
     "name": "Nombre",
-    "email": "Correo Electrónico",
+    "email": "Correo electrónico",
     "role": "Rol",
     "status": "Estado",
     "actions": "Acciones",
     "searchPlaceholder": "Buscar usuarios...",
-    "showing": "Mostrando {{from}}-{{to}} de {{total}}",
-    "page": "Página {{current}} de {{total}}",
-    "rowsPerPage": "Filas por página"
+    "showing": "Mostrando {{from}}-{{to}} / {{total}}",
+    "page": "Página {{current}} / {{total}}",
+    "rowsPerPage": "Filas por página",
+    "id": "ID",
+    "username": "Nombre de usuario",
+    "fullName": "Nombre completo",
+    "createdDate": "Fecha de creación",
+    "active": "Activo",
+    "inactive": "Inactivo",
+    "confirmed": "Confirmado",
+    "noData": "Sin datos",
+    "loading": "Cargando...",
+    "previous": "Anterior",
+    "next": "Siguiente",
+    "edit": "Editar",
+    "delete": "Eliminar"
   },
   "form": {
     "addTitle": "Añadir Nuevo Usuario",
     "editTitle": "Editar Usuario",
     "firstName": "Nombre",
     "lastName": "Apellido",
-    "email": "Correo Electrónico",
+    "email": "Correo electrónico",
     "role": "Rol",
     "password": "Contraseña",
     "confirmPassword": "Confirmar Contraseña",
@@ -33,6 +46,33 @@
     "save": "Guardar",
     "required": "Requerido",
     "successAdd": "Usuario añadido con éxito",
-    "successUpdate": "Usuario actualizado con éxito"
+    "successUpdate": "Usuario actualizado con éxito",
+    "editUser": "Editar usuario",
+    "addUser": "Agregar nuevo usuario",
+    "editDescription": "Edite la información del usuario",
+    "addDescription": "Ingrese la información del nuevo usuario",
+    "username": "Nombre de usuario",
+    "usernamePlaceholder": "Ingrese nombre de usuario",
+    "emailPlaceholder": "Ingrese correo electrónico",
+    "passwordPlaceholder": "Ingrese contraseña (mín. 8 caracteres)",
+    "firstNamePlaceholder": "Ingrese el nombre",
+    "lastNamePlaceholder": "Ingrese el apellido",
+    "phoneNumber": "Teléfono",
+    "phoneNumberPlaceholder": "Ingrese el teléfono",
+    "rolePlaceholder": "Ingrese rol",
+    "isActive": "Activo",
+    "isActiveDescription": "Estado activo del usuario",
+    "saving": "Guardando..."
+  },
+  "stats": {
+    "totalUsers": "Usuarios totales",
+    "activeUsers": "Usuarios activos",
+    "newThisMonth": "Nuevos este mes",
+    "confirmedUsers": "Usuarios confirmados",
+    "loading": "Cargando..."
+  },
+  "delete": {
+    "confirmTitle": "Eliminar usuario",
+    "confirmMessage": "¿Seguro que desea eliminar al usuario {{username}}?"
   }
 }
