--- a/src/locales/es/approval-user-role-management.json
+++ b/src/locales/es/approval-user-role-management.json
@@ -1,8 +1,8 @@
 {
   "approvalUserRole": {
-    "menu": "Gestión de Roles de Usuario de Aprobación",
-    "description": "Gestionar y organizar roles de usuario de aprobación",
-    "addButton": "Añadir Nuevo Rol",
+    "menu": "Gestión de roles de usuario de aprobación",
+    "description": "Gestione y edite los roles de usuario de aprobación",
+    "addButton": "Agregar nuevo rol",
     "searchPlaceholder": "Buscar...",
     "refresh": "Actualizar",
     "loading": "Cargando...",
@@ -10,9 +10,9 @@
     "table": {
       "id": "ID",
       "userFullName": "Usuario",
-      "approvalRoleName": "Rol de Aprobación",
-      "createdDate": "Fecha Creación",
-      "createdBy": "Creado Por",
+      "approvalRoleName": "Rol de aprobación",
+      "createdDate": "Fecha de creación",
+      "createdBy": "Creado por",
       "actions": "Acciones",
       "showing": "Mostrando {{from}}-{{to}} / {{total}}",
       "page": "Página {{current}} / {{total}}",
@@ -20,23 +20,23 @@
       "next": "Siguiente"
     },
     "delete": {
-      "title": "Eliminar Rol",
-      "confirmMessage": "¿Está seguro de que desea eliminar este rol de usuario?",
+      "title": "Eliminar rol",
+      "confirmMessage": "¿Seguro que desea eliminar este rol de usuario?",
       "confirmButton": "Eliminar",
       "cancelButton": "Cancelar"
     },
     "form": {
-      "editTitle": "Editar Rol de Usuario",
-      "addTitle": "Añadir Nuevo Rol de Usuario",
-      "editDescription": "Editar información del rol de usuario",
-      "addDescription": "Ingrese información del nuevo rol de usuario",
+      "editTitle": "Editar rol de usuario de aprobación",
+      "addTitle": "Agregar nuevo rol de usuario de aprobación",
+      "editDescription": "Edite la información del rol de usuario de aprobación",
+      "addDescription": "Ingrese la información del nuevo rol de usuario de aprobación",
       "userId": "Usuario",
-      "selectUser": "Seleccionar Usuario",
-      "noUserSelected": "Ningún usuario seleccionado",
-      "approvalRoleId": "Rol de Aprobación",
-      "selectApprovalRole": "Seleccionar Rol de Aprobación",
-      "noApprovalRoleSelected": "Ningún rol seleccionado",
-      "userIdRequired": "La selección del usuario es obligatoria",
+      "selectUser": "Seleccione usuario",
+      "noUserSelected": "No se seleccionó usuario",
+      "approvalRoleId": "Rol de aprobación",
+      "selectApprovalRole": "Seleccione rol de aprobación",
+      "noApprovalRoleSelected": "No se seleccionó rol de aprobación",
+      "userIdRequired": "La selección de usuario es obligatoria",
       "approvalRoleIdRequired": "La selección del rol de aprobación es obligatoria",
       "save": "Guardar",
       "saving": "Guardando...",
