--- a/src/locales/es/document-serial-type-management.json
+++ b/src/locales/es/document-serial-type-management.json
@@ -1,8 +1,8 @@
 {
-  "menu": "Gestión de Tipos de Series de Documentos",
+  "menu": "Gestión de tipos de documento",
   "title": "Gestión de Tipos de Series de Documentos",
-  "description": "Gestionar y editar tipos de series de documentos",
-  "addButton": "Añadir Nuevo Tipo de Serie de Documentos",
+  "description": "Gestione y edite los tipos de documento",
+  "addButton": "Agregar nuevo tipo de documento",
   "deleteTitle": "Eliminar Tipo de Serie de Documentos",
   "deleteMessage": "¿Estás seguro de que deseas eliminar este tipo de serie de documentos?",
   "deleteSuccess": "Tipo de serie de documentos eliminado con éxito",
@@ -15,11 +15,18 @@
     "searchPlaceholder": "Buscar tipos de series de documentos...",
     "showing": "Mostrando {{from}}-{{to}} de {{total}}",
     "page": "Página {{current}} de {{total}}",
-    "rowsPerPage": "Filas por página"
+    "rowsPerPage": "Filas por página",
+    "id": "ID",
+    "ruleType": "Tipo de regla",
+    "customerType": "Tipo de cliente",
+    "salesRep": "Representante de ventas",
+    "serialPrefix": "Prefijo de serie",
+    "serialLength": "Longitud de serie",
+    "createdDate": "Fecha de creación"
   },
   "form": {
-    "addTitle": "Añadir Nuevo Tipo de Serie de Documentos",
-    "editTitle": "Editar Tipo de Serie de Documentos",
+    "addTitle": "Agregar nuevo tipo de documento",
+    "editTitle": "Editar tipo de documento",
     "name": "Nombre",
     "code": "Código",
     "description": "Descripción",
@@ -30,6 +37,47 @@
     "save": "Guardar",
     "required": "Requerido",
     "successAdd": "Tipo de serie de documentos añadido con éxito",
-    "successUpdate": "Tipo de serie de documentos actualizado con éxito"
-  }
+    "successUpdate": "Tipo de serie de documentos actualizado con éxito",
+    "addDescription": "Ingrese la información del nuevo tipo de documento",
+    "editDescription": "Edite la información del tipo de documento",
+    "ruleType": "Tipo de regla",
+    "ruleType.required": "Debe seleccionar el tipo de regla",
+    "selectRuleType": "Seleccione tipo de regla",
+    "customerType": "Tipo de cliente",
+    "selectCustomerType": "Seleccione tipo de cliente (opcional)",
+    "noCustomerTypeSelected": "No se seleccionó tipo de cliente",
+    "salesRep": "Representante de ventas",
+    "selectSalesRep": "Seleccione representante de ventas (opcional)",
+    "noSalesRepSelected": "No se seleccionó representante de ventas",
+    "serialPrefix": "Prefijo de serie",
+    "serialPrefix.required": "El prefijo de serie es obligatorio",
+    "serialPrefix.maxLength": "El prefijo de serie puede tener como máximo 50 caracteres",
+    "serialPrefixPlaceholder": "Ingrese el prefijo de serie",
+    "serialLength": "Longitud de serie",
+    "serialLength.min": "La longitud de serie debe ser al menos 1",
+    "serialLength.max": "La longitud de serie puede ser como máximo 100",
+    "serialLengthPlaceholder": "Ingrese la longitud de serie",
+    "serialStart": "Inicio de serie",
+    "serialStart.min": "El inicio de serie debe ser al menos 0",
+    "serialStartPlaceholder": "Ingrese el valor inicial de serie",
+    "serialCurrent": "Serie actual",
+    "serialCurrent.min": "La serie actual debe ser al menos 0",
+    "serialCurrentPlaceholder": "Ingrese el valor actual de serie",
+    "serialIncrement": "Incremento de serie",
+    "serialIncrement.min": "El incremento de serie debe ser al menos 1",
+    "serialIncrementPlaceholder": "Ingrese el valor de incremento de serie"
+  },
+  "search": "Buscar...",
+  "refresh": "Actualizar",
+  "loading": "Cargando...",
+  "noData": "Sin datos",
+  "actions": "Acciones",
+  "cancel": "Cancelar",
+  "save": "Guardar",
+  "saving": "Guardando...",
+  "delete": "Eliminar",
+  "deleting": "Eliminando...",
+  "deleteConfirmTitle": "Confirmación de eliminación",
+  "deleteConfirmDescription": "¿Seguro que desea eliminar este registro? Esta acción no se puede deshacer.",
+  "totalRecords": "Total {{count}} registros"
 }
