--- a/src/locales/es/user-detail-management.json
+++ b/src/locales/es/user-detail-management.json
@@ -1,6 +1,6 @@
 {
-  "title": "Gestión de Detalles de Usuario",
-  "description": "Ver y gestionar detalles de usuario",
+  "title": "Detalles del usuario",
+  "description": "Edite la información de su perfil",
   "sections": {
     "personalInfo": "Información Personal",
     "accountSettings": "Configuración de Cuenta",
@@ -22,5 +22,46 @@
   "messages": {
     "successUpdate": "Detalles de usuario actualizados con éxito",
     "errorUpdate": "Error al actualizar detalles de usuario"
-  }
+  },
+  "profilePicture": "Foto de perfil",
+  "height": "Altura (cm)",
+  "weight": "Peso (kg)",
+  "gender": "Género",
+  "enterHeight": "Ingrese la altura (cm)",
+  "enterWeight": "Ingrese el peso (kg)",
+  "enterDescription": "Ingrese una descripción",
+  "selectGender": "Seleccione género",
+  "noGenderSelected": "No especificado",
+  "changeProfilePicture": "Cambiar foto de perfil",
+  "uploading": "Cargando...",
+  "createSuccess": "Detalle de usuario creado correctamente",
+  "updateSuccess": "Detalle de usuario actualizado correctamente",
+  "createError": "Ocurrió un error al crear el detalle del usuario",
+  "updateError": "Ocurrió un error al actualizar el detalle del usuario",
+  "uploadProfilePictureSuccess": "Foto de perfil cargada correctamente",
+  "uploadProfilePictureError": "Ocurrió un error al cargar la foto de perfil",
+  "fileSizeError": "El tamaño del archivo no puede superar 5 MB",
+  "fileTypeError": "Solo se pueden cargar archivos de imagen",
+  "profilePictureUrlMaxLength": "La URL de la foto de perfil puede tener como máximo 500 caracteres",
+  "heightMin": "La altura debe ser 0 o mayor",
+  "heightMax": "La altura puede ser como máximo 300 cm",
+  "weightMin": "El peso debe ser 0 o mayor",
+  "weightMax": "El peso puede ser como máximo 500 kg",
+  "descriptionMaxLength": "La descripción puede tener como máximo 2000 caracteres",
+  "genderNotSpecified": "No especificado",
+  "genderMale": "Masculino",
+  "genderFemale": "Femenino",
+  "genderOther": "Otro",
+  "loading": "Cargando...",
+  "loadingDescription": "Cargando datos, por favor espere",
+  "cancel": "Cancelar",
+  "saving": "Guardando...",
+  "save": "Guardar",
+  "changePassword": "Cambiar contraseña",
+  "currentPassword": "Contraseña actual",
+  "enterCurrentPassword": "Ingrese su contraseña actual",
+  "newPassword": "Nueva contraseña",
+  "enterNewPassword": "Ingrese su nueva contraseña (mín. 6 caracteres)",
+  "changingPassword": "Cambiando...",
+  "changePasswordButton": "Cambiar contraseña"
 }
